# learning-ros

devel/: .catkin  local_setup.sh
devel/include/custom_pkg/: custom_msg.h
devel/lib/custom_pkg/: custom_pkg_node  subscriber_node
devel/lib/learning_joy/: turtle_teleop_joy
devel/lib/pkgconfig/: custom_pkg.pc  foobar.pc  learning_joy.pc  mastering_ros_robot_description_pkg.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/share/custom_pkg/cmake/: custom_pkg-msg-paths.cmake  custom_pkgConfig.cmake
devel/share/foobar/cmake/: foobarConfig.cmake
devel/share/learning_joy/cmake/: learning_joy-msg-paths.cmake  learning_joyConfig.cmake
install/lib/pkgconfig/: custom_pkg.pc  rosserial_chibios.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_windows.pc  rosserial_xbee.pc
install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/share/custom_pkg/: package.xml
src/custom_pkg/: CMakeLists.txt
src/custom_pkg/msg/: custom_msg.msg
src/custom_pkg/src/: customPublisher.cpp  customSubscriber.cpp
src/learning_joy/launch/: turtle_joy.launch
(+49 files in other folders)
